buildscript {
    repositories {
        maven { url 'https://maven.fabricmc.net/' }
        gradlePluginPortal()
        mavenCentral()
    }
    dependencies {
        classpath 'net.fabricmc:fabric-loom:1.11.8'
        classpath 'com.google.code.gson:gson:2.11.0'
    }
    configurations.classpath {
        resolutionStrategy.force 'com.google.code.gson:gson:2.11.0'
    }
}

apply plugin: 'fabric-loom'
apply plugin: 'maven-publish'

version = mod_version
group = mod_group_id

base {
    archivesName = "DGLabCraft-${minecraft_version}-Fabric"
}

java {
    sourceCompatibility = JavaVersion.VERSION_1_8
    targetCompatibility = JavaVersion.VERSION_1_8
}

repositories {
    mavenCentral()
    maven { url 'https://maven.fabricmc.net/' }
}

dependencies {
    minecraft "com.mojang:minecraft:${minecraft_version}"
    mappings loom.officialMojangMappings()
    modImplementation "net.fabricmc:fabric-loader:${fabric_loader_version}"
    modImplementation "net.fabricmc.fabric-api:fabric-api:${fabric_api_version}"

    implementation 'org.java-websocket:Java-WebSocket:1.3.9'
    implementation('com.google.zxing:core:3.5.1') {
        exclude group: 'commons-logging', module: 'commons-logging'
    }
    include 'org.java-websocket:Java-WebSocket:1.3.9'
    include 'com.google.zxing:core:3.5.1'

    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.2'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

loom {
    runs {
        client {
            client()
            runDir 'run'
        }
    }
}

test {
    useJUnitPlatform()
}

tasks.named('processResources', ProcessResources).configure {
    def replaceProperties = [
        minecraft_version: minecraft_version,
        loader_version_range: loader_version_range,
        mod_id: mod_id,
        mod_name: mod_name,
        mod_license: mod_license,
        mod_version: mod_version,
        mod_authors: mod_authors,
        mod_description: mod_description
    ]
    inputs.properties replaceProperties
    filesMatching(['fabric.mod.json']) {
        expand replaceProperties
    }
}

tasks.named('jar', Jar).configure {
    archiveFileName = "DGLabCraft-${minecraft_version}-${project.version}-Fabric-dev.jar"
}

tasks.named('remapJar').configure {
    archiveFileName = "DGLabCraft-${minecraft_version}-${project.version}-Fabric.jar"
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

publishing {
    publications {
        register('mavenJava', MavenPublication) {
            artifact remapJar
        }
    }
}
